k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-nginx
  template:
    metadata:
      labels:
        app: k8s-nginx
    spec:
      containers:
      - name: k8s-nginx
        image: mohdwazid/k8s-docker-repo:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
