k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: in-k8s-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-nginx.35.232.166.130.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lb-k8-nginx
            port:
              number: 80
